--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
+    "mongoose-paginate": "^5.0.3",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
