--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "node-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Tiago Almeida <tiago.fernando.almeida@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node src/server.js"
-  },
+  "name": "gitemoji",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.5.2",
-    "mongoose-paginate": "^5.0.3",
-    "require-dir": "^1.2.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.11"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
